Removed unused html

--- a/game/shell.html
+++ b/game/shell.html
@@ -17,7 +17,13 @@
     <meta property="og:description" content="This web page is under construction, come back later">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="https://www.raylib.com/favicon.ico">
+    <link rel="shortcut icon" href="cube.svg">
+
+    <script>
+      /* CPU Speedup patch (helps lessen CPU usage at the cost of precision) */
+      /* NOTE: Can cause frames to be "in the past" only use for small animated sites */
+      performance.now = Date.now;
+    </script>
 
     <style>
       body {
@@ -175,25 +181,6 @@
 
     <textarea id="output" rows="8" style="display: none;"></textarea>
 
-    <script type='text/javascript' src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"> </script>
-    <script type='text/javascript'>
-        function saveFileFromMEMFSToDisk(memoryFSname, localFSname)     // This can be called by C/C++ code
-        {
-            var isSafari = false; // Not supported, navigator.userAgent access is being restricted
-            //var isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
-            var data = FS.readFile(memoryFSname);
-            var blob;
-
-            if (isSafari) blob = new Blob([data.buffer], { type: "application/octet-stream" });
-            else blob = new Blob([data.buffer], { type: "application/octet-binary" });
-
-            // NOTE: SaveAsDialog is a browser setting. For example, in Google Chrome,
-            // in Settings/Advanced/Downloads section you have a setting:
-            // 'Ask where to save each file before downloading' - which you can set true/false.
-            // If you enable this setting it would always ask you and bring the SaveAsDialog
-            saveAs(blob, localFSname);
-        }
-    </script>
     <script type='text/javascript'>
         var statusElement = document.querySelector('#status');
         var progressElement = document.querySelector('#progress');
@@ -214,11 +201,6 @@
                     //text = text.replace(/>/g, "&gt;");
                     //text = text.replace('\n', '<br>', 'g');
                     console.log(text);
-
-                    if (element) {
-                        element.value += text + "\n";
-                        element.scrollTop = element.scrollHeight; // focus on bottom
-                    }
                 };
             })(),
             printErr: function(text) {
