Added page text and more

--- a/game/shell.html
+++ b/game/shell.html
@@ -6,15 +6,16 @@
 
     <title>Landing Page</title>
 
-    <meta name="title" content="Work in progress!">
-    <meta name="description" content="This web page is under construction, come back later!">
-    <meta name="viewport" content="width=device-width">
+    <meta name="title" content="Work in progress!" />
+    <meta name="description" content="This web page is under construction, come back later!" />
+    <meta name="viewport" content="width=device-width" />
 
     <!-- Open Graph metatags for sharing -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Work in progress!">
-    <meta property="og:site_name" content="Future masterpiece">
-    <meta property="og:description" content="This web page is under construction, come back later">
+    <meta property="og:title" content="Work in progress!" />
+    <meta property="og:site_name" content="Future masterpiece" />
+    <meta property="og:description" content="This web page is under construction, come back later" />
+    <meta property="og:url" content="https://github.com/RegularRabbit05/BuildingPage" />
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="cube.svg">
